fixed merge conflict, added swagger for metrics api, removed parent route on @Router annotation
